[package]
name = "time_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"