[package]
name = "time_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = { version = "0.55.1", features = ["proc_macro", "async"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.18.0"
anyhow = "1.0.98"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
owo-colors = "4.2.2"
comfy-table = "7.1.4"
once_cell = "1.21.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"